--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,5 +1,5 @@
 name: storjshare-gui
-version: 7.1.0
+version: 7.3.1
 summary:  Earn money by sharing your hard drive space
 description: |
  Just download the Storj desktop application, and choose how much storage
@@ -11,7 +11,7 @@ confinement: strict
 parts:
   storjshare-gui:
     plugin: dump
-    source: https://github.com/Storj/storjshare-gui/releases/download/v7.1.0/storjshare-gui.amd64.deb
+    source: https://github.com/Storj/storjshare-gui/releases/download/v7.3.1/storjshare-gui.amd64.deb
     source-type: deb
     after:
       - desktop-gtk2
@@ -42,4 +42,6 @@ apps:
       - opengl
       - pulseaudio
       - unity7
-      - x11
+      - desktop
+      - desktop-legacy
+      - wayland
