Clear the execstack. Bump version.

--- a/snap/snapcraft.yaml.in
+++ b/snap/snapcraft.yaml.in
@@ -15,6 +15,10 @@ parts:
     source-type: deb
     after:
       - desktop-gtk2
+    prepare: |
+      execstack --clear-execstack opt/storjshare/storjshare
+    build-packages:
+      - execstack
     stage-packages:
       - libasound2
       - libgconf2-4
