--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,5 +1,5 @@
 name: storjshare-gui
-version: 7.3.1
+version: '7.3.1'
 summary:  Earn money by sharing your hard drive space
 description: |
  Just download the Storj desktop application, and choose how much storage
@@ -15,6 +15,10 @@ parts:
     source-type: deb
     after:
       - desktop-gtk2
+    prepare: |
+      execstack --clear-execstack opt/storjshare/storjshare
+    build-packages:
+      - execstack
     stage-packages:
       - libasound2
       - libgconf2-4
