--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -41,6 +41,7 @@ apps:
     plugs:
       - browser-support
       - desktop
+      - desktop-legacy
       - gsettings
       - home
       - mount-observe
